fixed search bar popup overlap

--- a/src/styles/_search-bar.scss
+++ b/src/styles/_search-bar.scss
@@ -2,7 +2,7 @@
   position: absolute;
   left: 33%;
   top: 15px;
-  width: 40rem;
+  width: 35%;
   z-index: 600;
 }
 
